Kinda Broken, but lots of Code to Calculate Votes (aka, nothing).

--- a/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
+++ b/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Vote.cs" />
+    <Compile Include="Classes\VotesList.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
