--- a/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
+++ b/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
@@ -56,10 +56,19 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewCandidate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewCandidate.Designer.cs">
+      <DependentUpon>NewCandidate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewCandidate.resx">
+      <DependentUpon>NewCandidate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
