Added Chart. Currently Overlaping. But printing. Just One page.

--- a/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
+++ b/PreferentialVoting/PreferentialVoting/PreferentialVoting.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart.Designer.cs">
+      <DependentUpon>Chart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Result.cs" />
     <Compile Include="Classes\Vote.cs" />
     <Compile Include="Classes\VotesList.cs" />
@@ -70,6 +76,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Chart.resx">
+      <DependentUpon>Chart.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditCandidate.resx">
       <DependentUpon>EditCandidate.cs</DependentUpon>
     </EmbeddedResource>
